--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "analyze": "npx vite-bundle-analyzer"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -39,6 +41,7 @@
     "date-fns": "^3.6.0",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.462.0",
+    "next-themes": "^0.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
